force-app/main/default/objects/Contact/fields/Aadhaar_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Card_Number__c</fullName>
    <label>Aadhaar Card Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>