force-app/main/default/objects/Contact/fields/Total_Commission_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Received__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Commission Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>