force-app/main/default/objects/Contact/fields/Total_Unpaid_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_Unpaid_Commission__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Unpaid Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>