force-app/main/default/objects/Contact/listViews/All_Customer_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Customer_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.LEAD_SOURCE</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Customer</value>
    </filters>
    <label>All Customer Contacts</label>
</ListView>